fix sidebar toggle on mobile

--- a/theme-nearform.css
+++ b/theme-nearform.css
@@ -153,6 +153,12 @@
   --search-result-keyword-padding          : 0.2em 0;
 }
 
+@media only screen and (min-width: 768px) {
+  body.close {
+    --sidebar-toggle-offset-left : 1rem;
+  }
+}
+
 @media only screen and (min-width: 992px) {
   :root {
     --modular-scale : 1.3;
@@ -167,24 +173,11 @@
   }
 }
 
-body.close .sidebar-toggle .sidebar-toggle-button {
-  left: 1rem;
+@media only screen and (max-width: 767px) {
+  :root {
+    --sidebar-toggle-offset-top: 0;
+    --sidebar-toggle-offset-left: 0;
+    --sidebar-toggle-border-radius: 0;
+    --sidebar-toggle-border-width: 0;
+  }
 }
-
-/*
-.sidebar-nav a, .sidebar nav a {
-  font-size: var(--font-size-s);
-}
-
-.sidebar .search .matching-post {
-  color: rgb(255, 255, 255);
-}
-
-.sidebar .search .results-panel .empty {
-  color: rgb(255, 255, 255);
-}
-
-.app-sub-sidebar > li > a {
-  padding: 0.4em 1em 0.4em 3em !important;
-}
-*/
